# maze-ing

./: .gitignore  42check.txt  Makefile  README.md  a_maze_ing.py  config.txt  display.py  file.txt  launch.json  maze.py  maze.txt  mazegen-1.0.0-py3-none-any.whl  mazegen.py  parser.py  pyproject.toml  solver.py  test.py
